package YouVideo;

public interface Episode extends Video{
    String getDate();


}
