package YouVideo;

public interface PublishableVideo extends Video{
    String getTitle();
    String getPublisher();
    String getLang();
}
