package YouVideo;

public class ShowClass implements Show{
    private String author;
    private int date;
}
