package YouVideo;

public interface Video {
    String getId();
    int getDuration();
    String getUrl();



}
