package YouVideo;

interface VideoAll extends Video{
    boolean equals(Object other);
}
