@startuml

abstract class VideoClass
interface Episode
interface PlatformSystem
interface Podcast
interface PublishableVideo
interface Show
interface Video
interface VideoAll

class ShowClass
class PremiumVideoClass
class PodcastClass
class PlatformSystemClass
class EpisodeClass
class BasicVideoClass
record Subtitle







PublishableVideo <|.. BasicVideoClass
Video <|-- VideoAll
Video <|-- PublishableVideo
Video <|-- Episode
VideoAll <|.. VideoClass
Episode <|.. EpisodeClass
BasicVideoClass<|-- PremiumVideoClass
VideoClass <|-- EpisodeClass
VideoClass <|--BasicVideoClass

Show <|.. ShowClass
Podcast <|.. PodcastClass
PlatformSystem <|.. PlatformSystemClass

interface Podcast {
  + getLang(): String
  + getTitle(): String
  + getAuthor(): String
  + equals(other: Object): boolean
  + addEpisode(String,int,String, String): void
  + getEpisode(): Iterator<EpisodeClass>
}


interface VideoAll{
  + equals(): boolean
}

interface Video {
  + getId(): String
  + getDuration(): int
  + getUrl(): String
}

interface PublishableVideo   {
  + getTitle(): String
  + getPublisher(): String
  + getLanguage(): String
}


interface Episode {
  + getDate(): String
}

interface Show {
  + getTitle(): String
  + getAuthor(): String
  + getDate(): String
  + getVideo(): PublishableVideo
}

abstract class VideoClass{
  - ID: String
    - duration: int
    - URL: String
    + VideoClass(String,int,String)
    + VideoClass(ID: String)
    + getId(): String
    + getDuration(): int
    + getUrl(): String
    + equals(other: Object): boolean

}

class PremiumVideoClass{
 - subtitle: Array<Subtitle>
   + PremiumVideoClass(String,int,String, String, String,String, String, String)
   + addSubtitle(String,String): void
   + subtitleIterator(): Iterator<Subtitle>

}

interface PublishableVideo {
  + getTitle(): String
  + getPublisher(): String
  + getLang(): String
}

class BasicVideoClass{
   - title: String
   - lang: String
   - publisher: String
   + BasicVideoClass(String,int,String,String,String,String)
   + BasicVideoClass(String)
   + getTitle(): String
   + getLang(): String
   + getPublisher(): String
}

class EpisodeClass{
   - date: String
   + EpisodeClass(String,int,String,String,String)
   + EpisodeClass(String)


}

@enduml
